# mgi-mind

./: .dockerignore  .editorconfig  .gitignore  AI_INSTRUCTIONS.md  AUDIT_STATUS.md  BENCHMARKS.md  CHANGELOG-ARCHIVE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  PROCESS.md  README.md  README.ru.md  README.zh.md  ROADMAP.md  SECURITY.md  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmark/: README.md
benchmark/datasets/: procedural-v010-177.jsonl  procedural-v010-227.jsonl  procedural-v010-bootstrap-111.jsonl
benchmark/results/2026-06-02-cpu-overnight/: README.md
benchmark/results/2026-06-02-cpu-overnight/run01_minilm_rerank_off/: config.json  policy.json  raw.json  started_at.txt
benchmark/results/2026-06-02-procedural-bootstrap/: raw.json
benchmark/results/2026-06-02-procedural-v010-final/: raw.json
benchmark/results/2026-06-02-procedural-v3/: raw.json
benchmark/results/2026-06-02-v012-regression/: started_at.txt
benchmark/results/2026-06-02-v012-regression/pod1-rerank-on/: raw.json
benchmark/results/2026-06-02-v012-regression/pod2-rerank-off/: raw.json
benchmark/results/2026-06-03-gpu-v0143/: v0143-e5fp16-rerank-off.json  v0143-e5fp16-rerank-on-variance.json  v0143-e5fp16-rerank-on.json  v0143-minilm-fp16-rerank-off.json
benchmark/results/2026-06-05-manual-rebuild/: cleanup-final.md  results.md
benchmark/results/2026-06-08-stale-partial-n155/: README.md  t1a_out.jsonl  t1b_out.jsonl  t2_1_out.jsonl  t2_2_out.jsonl  t2_3_out.jsonl  t2_4_out.jsonl
benchmarks/: README.md
benchmarks/judge-prompts/: stale-judge.md  strict-drafts.md  strict-v4-final.md
benchmarks/v0.14.3-gpu/: README.md  results.json
clients/python/: README.md  pyproject.toml
clients/python/mgimind/: __init__.py  _client.py
clients/python/tests/: test_client.py
docker/: entrypoint.sh
docker/cuda/: Dockerfile  README.md
docs/: PHASE_D2_D6.md  demo.tape
docs/blog/: 2026-06-04-validity-model.md  2026-06-05-i-found-my-headline-feature-was-broken.md
docs/design/: provenance-add.md
docs/design/adr/: 0001-cardinality-enum.md  0002-mechanism-1-invariant.md  0003-background-loop-guarantees.md  0004-install-mode-illustrative-anchors.md  0005-superseded-vs-stale-status.md  0006-derived-state-provenance.md  0007-extractor-model-choice.md  README.md
docs/design/v1.4/: README.md  implementation-plan.md  prior-art.md  stale-fit-critique.md  synthesis.md
docs/design/v1.4/synthesis-history/: 00-level-1-seed.md  01-doubt-window-engineering-note.md  02-inherited-flag-forced-by-evidence.md
docs/integrations/: README.md  hermes.py  langgraph.py  openai_agents.py  openclaude.md  pydantic_ai.py  raw_http.py
mcp-server/: index.js  package.json
scripts/: local-bench-gpu.sh  scrape_procedural_dataset.py  stale-parallel.sh  stale-rotate.sh
src/: access.rs  audit.rs  bench.rs  bench_policy.rs  bench_procedural.rs  bench_stale.rs  calibration.rs  cli.rs  confidence.rs  config.rs  consolidate.rs  daemon.rs  doubt.rs  duel.rs  embedder.rs  error.rs  extractor.rs  hardware.rs  http_api.rs  ingest.rs  install_detect.rs  install_mode.rs  integrity.rs  knowledge.rs  links.rs  main.rs  mcp.rs  md_reconcile.rs  migrate_v14.rs  outcome.rs  procedure.rs  propagation.rs  provenance.rs  pulse.rs  qa_judge.rs  relevance.rs  reranker.rs  retrieval_policy.rs  secrets.rs  session.rs  (+7 more)
tests/: cli_integration.rs  http_integration.rs
