[package]
name = "mgi-mind"
version = "0.14.0"
edition = "2024"
authors = ["Mad God Inc"]
description = "AI-native second brain. Self-hosted, token-optimized memory for AI assistants."
license = "Apache-2.0"
repository = "https://github.com/madgodinc/mgi-mind"

[[bin]]
name = "mgimind"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web viewer — ephemeral HTTP server for `mgimind viewer`. Static assets are
# baked into the binary, so the viewer adds no runtime artifacts and stays
# consistent with the single-binary architecture from v0.8.0 (no Node).
axum = "0.7"
tower = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Qdrant vector database
qdrant-client = "1"

# ONNX Runtime for local embeddings.
# Default build uses load-dynamic + CPU. The `cuda` cargo feature switches the
# embedder/reranker to register the CUDA execution provider at runtime (still
# opt-in via MGIMIND_USE_CUDA=1). The Dockerfile in docker/cuda/ builds with it.
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }

# Tokenizer for embedding models
tokenizers = "0.21"

# UUID generation (v5 = deterministic IDs from content hash)
uuid = { version = "1", features = ["v4", "v5"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system
dirs = "6"

# Hashing for deduplication
blake3 = "1"

# Thread-safe lazy initialization
once_cell = "1"

# Encoding for vault
base64 = "0.22"

# Encryption for vault
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Hidden password input (no echo) — audit #3
rpassword = "7"

# Atomic file writes (temp + rename) — audit #4
tempfile = "3"

# Integrity verification of downloads — audit #6
sha2 = "0.10"
hex = "0.4"

# Native HTTP + archive extraction (replaces curl/tar/unzip shellouts) — audit #19
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
futures-util = "0.3"

# Zeroize password buffers after key derivation — audit #3
zeroize = "1"

# Provenance ingest (mind_provenance_add): URL parse + small validation regexes.
# Both are already in the transitive tree (via reqwest / tokenizers) — listing
# them direct keeps the import path explicit.
url = "2"
regex = "1"

[dev-dependencies]
tempfile = "3"

# Optional CUDA build for the bench / power-user GPU path. Enabled by the
# Dockerfile in docker/cuda/, never by the default release. Activates the
# CUDA execution provider in embedder.rs and reranker.rs (also gated by
# MGIMIND_USE_CUDA=1 at runtime, so a CUDA-built binary still defaults to CPU
# unless the env var is set).
[features]
default = []
cuda = ["ort/cuda"]
