[package]
name = "mgi-mind"
version = "2.2.0"
edition = "2024"
authors = ["Mad God Inc <mad.god.inc@gmail.com>"]
description = "AI-native second brain. Self-hosted, token-optimized memory for AI assistants."
license = "Apache-2.0"
repository = "https://github.com/madgodinc/mgi-mind"
homepage = "https://github.com/madgodinc/mgi-mind"
readme = "README.md"
keywords = ["mcp", "memory", "llm", "embeddings", "qdrant"]
categories = ["command-line-utilities", "database"]
# Benchmark corpora and raw run outputs live in git for reproducibility
# (cited by BENCHMARKS.md), but a `cargo install` needs only the source.
exclude = ["benchmark/", "docs/", "clients/python/.venv/", "*.tape", "CHANGELOG-ARCHIVE.md"]

[[bin]]
name = "mgimind"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web viewer — ephemeral HTTP server for `mgimind viewer`. Static assets are
# baked into the binary, so the viewer adds no runtime artifacts and stays
# consistent with the single-binary architecture from v0.8.0 (no Node).
axum = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Qdrant vector database
qdrant-client = "1"

# ONNX Runtime for local embeddings.
# Default build uses load-dynamic + CPU. The `cuda` cargo feature switches the
# embedder/reranker to register the CUDA execution provider at runtime (still
# opt-in via MGIMIND_USE_CUDA=1). The Dockerfile in docker/cuda/ builds with it.
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }

# Tokenizer for embedding models
tokenizers = "0.21"

# UUID generation (v5 = deterministic IDs from content hash)
uuid = { version = "1", features = ["v4", "v5"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system
dirs = "6"

# Hashing for deduplication
blake3 = "1"

# Thread-safe lazy initialization
once_cell = "1"

# parking_lot::Mutex on async hot paths — non-poisoning, short-critical-
# section fast, won't block tokio runtime workers under contention.
# - Phase 2: lock-map in knowledge::add_fact (outer mutex for brief
#   HashMap lookup; per-key tokio::sync::Mutex holds across await).
# - Phase 3: inherited-facts registry (std::sync::Mutex would block).
parking_lot = "0.12"

# Encryption for vault
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Hidden password input (no echo) — audit #3
rpassword = "7"

# Atomic file writes (temp + rename) — audit #4
tempfile = "3"

# Integrity verification of downloads — audit #6
sha2 = "0.10"
hex = "0.4"

# Native HTTP + archive extraction (replaces curl/tar/unzip shellouts) — audit #19
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
futures-util = "0.3"

# Zeroize password buffers after key derivation — audit #3
zeroize = "1"

# Provenance ingest (mind_provenance_add): URL parse + small validation regexes.
# Both are already in the transitive tree (via reqwest / tokenizers) — listing
# them direct keeps the import path explicit.
url = "2"
regex = "1"
fs2 = "0.4.3"

[dev-dependencies]
tempfile = "3"
# v1.5 Phase 6 step 6.2: install-mode detect tests set explicit mtimes
# to verify the recency-window filter without racing wall-clock.
filetime = "0.2"

# v1.4 Phase 5: PR_SET_PDEATHSIG via libc::prctl for llama-server
# orphan prevention. Linux-only — covers SIGKILL/OOM paths where the
# parent mgimind dies without running shutdown_server.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# Optional CUDA build for the bench / power-user GPU path. Enabled by the
# Dockerfile in docker/cuda/, never by the default release. Activates the
# CUDA execution provider in embedder.rs and reranker.rs (also gated by
# MGIMIND_USE_CUDA=1 at runtime, so a CUDA-built binary still defaults to CPU
# unless the env var is set).
[features]
default = []
cuda = ["ort/cuda"]
# v1.4 Phase 5 — auto-extractor (Qwen 2.5 GGUF via subprocess llama-server).
# Default off because the auto-ingest hook calls knowledge::add_fact, which in
# Phase 2+ runs the duel rule + per-(subject,predicate) lock + quarantine
# routing. Until users understand the model semantics, default-on would let an
# auto-installed extractor write through a path they did not explicitly opt
# into. Enable with `cargo build --release --features extractor`, then `mgimind
# extractor install`.
extractor = []
